--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@ image: images/menu/photo_blog.jpg
   
   <div class="text_column" style='font-size: 115%'>
     <div>
-      Hi, I am Nikita!
+      Hi, I am Sanya Wadhawan!
       <img style='vertical-align:top; height:1.25em' src='https://kozodoi.me/images/favicons/cropped_parrot.gif'>
     </div>
 
     <p>
-    I am ML scientist working on the frontier of research & business.
+    I am a student, in my 2nd year of B.Tech Computer Science Engineering specializing in cyber security and with a very keen interest in AI/ML.
     <br>
-    This website hosts my ML blog, portfolio and more of my work. All opinions are my own.
+    This website 
     </p>
 
     <p>Check out <a href="https://kozodoi.me/cv.pdf">my CV</a> and other pages:
